added connenction to arxiv

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -10,7 +10,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
+   "id": "6c26a7c0-135c-40c7-84af-16260c96793a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting arxiv\n",
+      "  Downloading arxiv-1.4.2-py3-none-any.whl (11 kB)\n",
+      "Collecting feedparser\n",
+      "  Downloading feedparser-6.0.8-py3-none-any.whl (81 kB)\n",
+      "\u001b[K     |████████████████████████████████| 81 kB 1.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting sgmllib3k\n",
+      "  Downloading sgmllib3k-1.0.0.tar.gz (5.8 kB)\n",
+      "Building wheels for collected packages: sgmllib3k\n",
+      "  Building wheel for sgmllib3k (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6065 sha256=9628adb2c5f911b2608828809f9555a106d3a0b745a02b4cf5c0b995c871b39d\n",
+      "  Stored in directory: /Users/vatsalpatel/Library/Caches/pip/wheels/83/63/2f/117884c3b19d46b64d3d61690333aa80c88dc14050e269c546\n",
+      "Successfully built sgmllib3k\n",
+      "Installing collected packages: sgmllib3k, feedparser, arxiv\n",
+      "Successfully installed arxiv-1.4.2 feedparser-6.0.8 sgmllib3k-1.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install arxiv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
    "outputs": [],
@@ -19,17 +50,477 @@
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import arxiv\n",
     "\n",
     "from node2vec import node2vec as n2v"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "5116e841-87c8-4e79-9c1f-6b740c7a9ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants\n",
+    "queries = [\n",
+    "    'automl', 'machinelearning', 'data', 'phyiscs','mathematics', 'recommendation system', 'nlp', 'neural networks'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "304a4f74-723a-4e7c-9781-f55247b11df2",
+   "id": "2475de37-5595-4d83-92d1-0d13d7ed1bc7",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4da375ad-8609-4a77-9aa1-f82a321a8fbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = arxiv.Search(\n",
+    "  query = \"automl\",\n",
+    "  max_results = 3,\n",
+    "  sort_by = arxiv.SortCriterion.SubmittedDate,\n",
+    "  sort_order = arxiv.SortOrder.Descending\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0f575381-db74-4de9-aac3-846651e67ee0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title:  Review of automated time series forecasting pipelines \n",
+      "Date:  2022-02-03 17:26:27+00:00 \n",
+      "Id:  http://arxiv.org/abs/2202.01712v1 \n",
+      "URL:  http://arxiv.org/pdf/2202.01712v1 \n",
+      "\n",
+      " cs.LG ['cs.LG']\n",
+      "Title:  Hubble Asteroid Hunter: I. Identifying asteroid trails in Hubble Space Telescope images \n",
+      "Date:  2022-02-01 06:56:20+00:00 \n",
+      "Id:  http://arxiv.org/abs/2202.00246v1 \n",
+      "URL:  http://arxiv.org/pdf/2202.00246v1 \n",
+      "\n",
+      " astro-ph.EP ['astro-ph.EP', 'astro-ph.IM']\n",
+      "Title:  NAS-Bench-Suite: NAS Evaluation is (Now) Surprisingly Easy \n",
+      "Date:  2022-01-31 18:02:09+00:00 \n",
+      "Id:  http://arxiv.org/abs/2201.13396v1 \n",
+      "URL:  http://arxiv.org/pdf/2201.13396v1 \n",
+      "\n",
+      " cs.LG ['cs.LG', 'cs.AI', 'stat.ML']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in search.results():\n",
+    "    print('Title: ', result.title, '\\nDate: ',result.published , '\\nId: ', result.entry_id,'\\nURL: ', result.pdf_url, '\\n\\n', result.primary_category, result.categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efa7c054-93f2-4e56-ba4c-661a9bd40db6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "16831167-f83c-4011-9624-0119e5455cbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants\n",
+    "edge_path = './data/edges.csv'\n",
+    "hero_path = './data/hero-network.csv'\n",
+    "node_path = './data/nodes.csv'\n",
+    "aven_path = './data/avengers.csv'\n",
+    "char_path = './data/characters.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f0f204e-2287-4064-aff4-f2fc155f136f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb2db243-12d4-43f8-9fc6-7028ee6959d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bba0418e-b6bd-4fe6-9b2c-c7d71481d6e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "314452b9-75e5-4ea3-be47-6145b2bcff32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34cfb744-a211-4029-b648-1481148f26ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c58ad730-0ceb-4cf3-a14f-63240e13c332",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9155b026-a46c-4baa-9644-1b42d06024ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa4951a-93e6-43e9-913a-030a00d1de0d",
+   "metadata": {},
+   "source": [
+    "## Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "14ee82e0-2467-49ff-bd3f-a3efbf98644d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge = pd.read_csv(edge_path)\n",
+    "hero = pd.read_csv(hero_path)\n",
+    "node = pd.read_csv(node_path)\n",
+    "char = pd.read_csv(char_path)\n",
+    "aven = pd.read_csv(aven_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7be560ef-39af-41d1-8b7a-69d6861ed58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>char</th>\n",
+       "      <th>charname</th>\n",
+       "      <th>birthname</th>\n",
+       "      <th>types</th>\n",
+       "      <th>universes</th>\n",
+       "      <th>birthplace</th>\n",
+       "      <th>superpowers</th>\n",
+       "      <th>religions</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>memberof</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q18754954</td>\n",
+       "      <td>Silk</td>\n",
+       "      <td>Cindy Moon</td>\n",
+       "      <td>mutate, comics character</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>superhuman agility / reflexes, superhuman dura...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q3127430</td>\n",
+       "      <td>Snowbird</td>\n",
+       "      <td>Narya</td>\n",
+       "      <td>fictional deity, comics character</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>flight, shapeshifting, superhuman strength, re...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q546340</td>\n",
+       "      <td>Thunderbird</td>\n",
+       "      <td>John Proudstar</td>\n",
+       "      <td>television character, animated character, mutant</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>superhuman durability, superhuman speed, super...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1194236</td>\n",
+       "      <td>Cannonball</td>\n",
+       "      <td>Samuel Zachery Guthrie</td>\n",
+       "      <td>superhero film character, animated character, ...</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>thermo-chemical energy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2087326</td>\n",
+       "      <td>Shriek</td>\n",
+       "      <td>Frances Louise Barrison</td>\n",
+       "      <td>film character, comics character</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sonic scream</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2275950</td>\n",
+       "      <td>Shatterstar</td>\n",
+       "      <td>Gaveedra Seven</td>\n",
+       "      <td>superhero film character, mutant</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>superhuman agility / reflexes, superhuman dura...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q3453575</td>\n",
+       "      <td>Rusty Collins</td>\n",
+       "      <td>Russell Collins</td>\n",
+       "      <td>superhero film character, animated character, ...</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>pyrokinesis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q865017</td>\n",
+       "      <td>Mister Fantastic</td>\n",
+       "      <td>Reed Richards</td>\n",
+       "      <td>film character, animated character, fictional ...</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>elasticity</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q616633</td>\n",
+       "      <td>Betty Ross</td>\n",
+       "      <td>Elizabeth Ross</td>\n",
+       "      <td>gamma mutate, harpy in a work of fiction, film...</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>superhuman durability, superhuman speed, super...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q838088</td>\n",
+       "      <td>Iceman</td>\n",
+       "      <td>Robert Louis Drake</td>\n",
+       "      <td>superhero film character, animated character, ...</td>\n",
+       "      <td>Marvel Universe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cryokinesis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>137 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         char          charname  \\\n",
+       "0    http://www.wikidata.org/entity/Q18754954              Silk   \n",
+       "1     http://www.wikidata.org/entity/Q3127430          Snowbird   \n",
+       "2      http://www.wikidata.org/entity/Q546340       Thunderbird   \n",
+       "3     http://www.wikidata.org/entity/Q1194236        Cannonball   \n",
+       "4     http://www.wikidata.org/entity/Q2087326            Shriek   \n",
+       "..                                        ...               ...   \n",
+       "132   http://www.wikidata.org/entity/Q2275950       Shatterstar   \n",
+       "133   http://www.wikidata.org/entity/Q3453575     Rusty Collins   \n",
+       "134    http://www.wikidata.org/entity/Q865017  Mister Fantastic   \n",
+       "135    http://www.wikidata.org/entity/Q616633        Betty Ross   \n",
+       "136    http://www.wikidata.org/entity/Q838088            Iceman   \n",
+       "\n",
+       "                   birthname  \\\n",
+       "0                 Cindy Moon   \n",
+       "1                      Narya   \n",
+       "2             John Proudstar   \n",
+       "3     Samuel Zachery Guthrie   \n",
+       "4    Frances Louise Barrison   \n",
+       "..                       ...   \n",
+       "132           Gaveedra Seven   \n",
+       "133          Russell Collins   \n",
+       "134            Reed Richards   \n",
+       "135           Elizabeth Ross   \n",
+       "136       Robert Louis Drake   \n",
+       "\n",
+       "                                                 types        universes  \\\n",
+       "0                             mutate, comics character  Marvel Universe   \n",
+       "1                    fictional deity, comics character  Marvel Universe   \n",
+       "2     television character, animated character, mutant  Marvel Universe   \n",
+       "3    superhero film character, animated character, ...  Marvel Universe   \n",
+       "4                     film character, comics character  Marvel Universe   \n",
+       "..                                                 ...              ...   \n",
+       "132                   superhero film character, mutant  Marvel Universe   \n",
+       "133  superhero film character, animated character, ...  Marvel Universe   \n",
+       "134  film character, animated character, fictional ...  Marvel Universe   \n",
+       "135  gamma mutate, harpy in a work of fiction, film...  Marvel Universe   \n",
+       "136  superhero film character, animated character, ...  Marvel Universe   \n",
+       "\n",
+       "    birthplace                                        superpowers religions  \\\n",
+       "0          NaN  superhuman agility / reflexes, superhuman dura...       NaN   \n",
+       "1          NaN  flight, shapeshifting, superhuman strength, re...       NaN   \n",
+       "2          NaN  superhuman durability, superhuman speed, super...       NaN   \n",
+       "3          NaN                             thermo-chemical energy       NaN   \n",
+       "4          NaN                                       sonic scream       NaN   \n",
+       "..         ...                                                ...       ...   \n",
+       "132        NaN  superhuman agility / reflexes, superhuman dura...       NaN   \n",
+       "133        NaN                                        pyrokinesis       NaN   \n",
+       "134        NaN                                         elasticity       NaN   \n",
+       "135        NaN  superhuman durability, superhuman speed, super...       NaN   \n",
+       "136        NaN                                        cryokinesis       NaN   \n",
+       "\n",
+       "    gender occupation memberof  \n",
+       "0      NaN        NaN      NaN  \n",
+       "1      NaN        NaN      NaN  \n",
+       "2      NaN        NaN      NaN  \n",
+       "3      NaN        NaN      NaN  \n",
+       "4      NaN        NaN      NaN  \n",
+       "..     ...        ...      ...  \n",
+       "132    NaN        NaN      NaN  \n",
+       "133    NaN        NaN      NaN  \n",
+       "134    NaN        NaN      NaN  \n",
+       "135    NaN        NaN      NaN  \n",
+       "136    NaN        NaN      NaN  \n",
+       "\n",
+       "[137 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0817fa-4eb4-4968-8b79-23de7fc9846e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555b32ed-3c68-412a-bf34-798292d47684",
+   "metadata": {},
+   "source": [
+    "## Generate Network"
+   ]
   },
   {
    "cell_type": "code",
