fetched data associated to queries

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5116e841-87c8-4e79-9c1f-6b740c7a9ef9",
    "metadata": {},
    "outputs": [],
@@ -73,17 +73,17 @@
    "id": "b445bcd4-ecdd-4b72-84ff-e36afc5e1a2c",
    "metadata": {},
    "source": [
-    "# Import Data"
+    "# Fetch Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "14298db4-2590-4992-a49c-d6c93d962b44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_arxiv(queries, max_results = 10000):\n",
+    "def search_arxiv(queries, max_results = 1000):\n",
     "    '''\n",
     "    This function will search arxiv associated to a set of queries and store\n",
     "    the latest 10000 (max_results) associated to that search.\n",
@@ -92,7 +92,7 @@
     "        queries (List -> Str) : A list of strings containing keywords you want\n",
     "                                to search on Arxiv\n",
     "        max_results (Int) : The maximum number of results you want to see associated\n",
-    "                            to your search. Default value is 10000, capped at 300000\n",
+    "                            to your search. Default value is 1000, capped at 300000\n",
     "                            \n",
     "    returns:\n",
     "        This function will return a DataFrame holding the following columns associated\n",
@@ -109,7 +109,6 @@
     "    searches = []\n",
     "    # hitting the API\n",
     "    for query in queries:\n",
-    "        print(query)\n",
     "        search = arxiv.Search(\n",
     "          query = query,\n",
     "          max_results = max_results,\n",
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "96f77985-1287-4641-bd45-9dbd873c0da4",
    "metadata": {},
    "outputs": [
@@ -145,89 +144,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning Searches\n",
-      "query\n",
-      "query\n",
-      "query\n",
-      "query\n",
-      "Completed Searches\n",
-      "Building DataFrame\n"
+      "CPU times: user 7.99 s, sys: 421 ms, total: 8.41 s\n",
+      "Wall time: 4min 1s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5332, 6)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
     "research_df = search_arxiv(\n",
-    "    queries = ['automl', 'recommender system', 'nlp', 'data science'],\n",
-    "    max_results = 10000\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffd99890-db2e-409e-9239-010ea99ccbe0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    queries = queries,\n",
+    "    max_results = 1000\n",
+    ")\n",
     "research_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a0c3611-a6df-4517-b571-5e4ceebf1ba6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecd9d342-e047-4a93-b5b1-41531b9b2bcb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "4da375ad-8609-4a77-9aa1-f82a321a8fbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search = arxiv.Search(\n",
-    "  query = \"automl\",\n",
-    "  max_results = 10,\n",
-    "  sort_by = arxiv.SortCriterion.SubmittedDate,\n",
-    "  sort_order = arxiv.SortOrder.Descending\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f3f4986b-2a15-4bfc-b9fe-5d9dfedd2014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = []\n",
-    "for res in search.results():\n",
-    "    data = {\n",
-    "        'title' : res.title,\n",
-    "        'date' : res.published,\n",
-    "        'article_id' : res.entry_id,\n",
-    "        'url' : res.pdf_url,\n",
-    "        'main_topic' : res.primary_category,\n",
-    "        'all_topics' : res.categories\n",
-    "    }\n",
-    "    d.append(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "428e4801-362f-4985-b3af-818f51c30c02",
+   "execution_count": 5,
+   "id": "ffd99890-db2e-409e-9239-010ea99ccbe0",
    "metadata": {},
    "outputs": [
     {
@@ -255,8 +199,8 @@
        "      <th>date</th>\n",
        "      <th>article_id</th>\n",
        "      <th>url</th>\n",
-       "      <th>primary_category</th>\n",
-       "      <th>all_categories</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -306,207 +250,128 @@
        "      <td>[cs.LG]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Winning solutions and post-challenge analyses ...</td>\n",
-       "      <td>2022-01-11 06:21:18+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.03801v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.03801v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>TPAD: Identifying Effective Trajectory Predict...</td>\n",
-       "      <td>2022-01-09 06:50:39+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.02941v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.02941v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG, I.6.7; I.5.1]</td>\n",
+       "      <th>5327</th>\n",
+       "      <td>Reinforcement Learning-Based Deadline and Batt...</td>\n",
+       "      <td>2022-01-25 14:42:29+00:00</td>\n",
+       "      <td>http://arxiv.org/abs/2201.10361v2</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10361v2</td>\n",
+       "      <td>cs.NI</td>\n",
+       "      <td>[cs.NI]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Neural Architecture Search for Inversion</td>\n",
-       "      <td>2022-01-05 17:45:39+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.01772v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.01772v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG]</td>\n",
+       "      <th>5328</th>\n",
+       "      <td>Resource-efficient Deep Neural Networks for Au...</td>\n",
+       "      <td>2022-01-25 14:41:08+00:00</td>\n",
+       "      <td>http://arxiv.org/abs/2201.10360v1</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10360v1</td>\n",
+       "      <td>eess.SP</td>\n",
+       "      <td>[eess.SP, cs.CV]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AutoDES: AutoML Pipeline Generation of Classif...</td>\n",
-       "      <td>2022-01-01 15:17:07+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.00207v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.00207v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG]</td>\n",
+       "      <th>5329</th>\n",
+       "      <td>Ultra Low-Parameter Denoising: Trainable Bilat...</td>\n",
+       "      <td>2022-01-25 14:33:56+00:00</td>\n",
+       "      <td>http://arxiv.org/abs/2201.10345v1</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10345v1</td>\n",
+       "      <td>eess.IV</td>\n",
+       "      <td>[eess.IV, cs.CV]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>MLOps -- Definitions, Tools and Challenges</td>\n",
-       "      <td>2022-01-01 10:38:31+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.00162v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.00162v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG, cs.SE, I.2]</td>\n",
+       "      <th>5330</th>\n",
+       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
+       "      <td>2022-01-25 14:25:26+00:00</td>\n",
+       "      <td>http://arxiv.org/abs/2201.10340v1</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
+       "      <td>cs.IT</td>\n",
+       "      <td>[cs.IT, cs.LG, math.IT]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5331</th>\n",
+       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
+       "      <td>2022-01-25 14:03:57+00:00</td>\n",
+       "      <td>http://arxiv.org/abs/2201.10328v3</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>[cs.AI, cs.LG]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5332 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title  \\\n",
-       "0  Review of automated time series forecasting pi...   \n",
-       "1  Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
-       "2  NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
-       "3  Online AutoML: An adaptive AutoML framework fo...   \n",
-       "4  Automated Reinforcement Learning (AutoRL): A S...   \n",
-       "5  Winning solutions and post-challenge analyses ...   \n",
-       "6  TPAD: Identifying Effective Trajectory Predict...   \n",
-       "7           Neural Architecture Search for Inversion   \n",
-       "8  AutoDES: AutoML Pipeline Generation of Classif...   \n",
-       "9         MLOps -- Definitions, Tools and Challenges   \n",
+       "                                                  title  \\\n",
+       "0     Review of automated time series forecasting pi...   \n",
+       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
+       "3     Online AutoML: An adaptive AutoML framework fo...   \n",
+       "4     Automated Reinforcement Learning (AutoRL): A S...   \n",
+       "...                                                 ...   \n",
+       "5327  Reinforcement Learning-Based Deadline and Batt...   \n",
+       "5328  Resource-efficient Deep Neural Networks for Au...   \n",
+       "5329  Ultra Low-Parameter Denoising: Trainable Bilat...   \n",
+       "5330  Distributed Image Transmission using Deep Join...   \n",
+       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
        "\n",
-       "                       date                         article_id  \\\n",
-       "0 2022-02-03 17:26:27+00:00  http://arxiv.org/abs/2202.01712v1   \n",
-       "1 2022-02-01 06:56:20+00:00  http://arxiv.org/abs/2202.00246v1   \n",
-       "2 2022-01-31 18:02:09+00:00  http://arxiv.org/abs/2201.13396v1   \n",
-       "3 2022-01-24 15:37:20+00:00  http://arxiv.org/abs/2201.09750v1   \n",
-       "4 2022-01-11 12:41:43+00:00  http://arxiv.org/abs/2201.03916v1   \n",
-       "5 2022-01-11 06:21:18+00:00  http://arxiv.org/abs/2201.03801v1   \n",
-       "6 2022-01-09 06:50:39+00:00  http://arxiv.org/abs/2201.02941v1   \n",
-       "7 2022-01-05 17:45:39+00:00  http://arxiv.org/abs/2201.01772v1   \n",
-       "8 2022-01-01 15:17:07+00:00  http://arxiv.org/abs/2201.00207v1   \n",
-       "9 2022-01-01 10:38:31+00:00  http://arxiv.org/abs/2201.00162v1   \n",
+       "                          date                         article_id  \\\n",
+       "0    2022-02-03 17:26:27+00:00  http://arxiv.org/abs/2202.01712v1   \n",
+       "1    2022-02-01 06:56:20+00:00  http://arxiv.org/abs/2202.00246v1   \n",
+       "2    2022-01-31 18:02:09+00:00  http://arxiv.org/abs/2201.13396v1   \n",
+       "3    2022-01-24 15:37:20+00:00  http://arxiv.org/abs/2201.09750v1   \n",
+       "4    2022-01-11 12:41:43+00:00  http://arxiv.org/abs/2201.03916v1   \n",
+       "...                        ...                                ...   \n",
+       "5327 2022-01-25 14:42:29+00:00  http://arxiv.org/abs/2201.10361v2   \n",
+       "5328 2022-01-25 14:41:08+00:00  http://arxiv.org/abs/2201.10360v1   \n",
+       "5329 2022-01-25 14:33:56+00:00  http://arxiv.org/abs/2201.10345v1   \n",
+       "5330 2022-01-25 14:25:26+00:00  http://arxiv.org/abs/2201.10340v1   \n",
+       "5331 2022-01-25 14:03:57+00:00  http://arxiv.org/abs/2201.10328v3   \n",
        "\n",
-       "                                 url primary_category  \\\n",
-       "0  http://arxiv.org/pdf/2202.01712v1            cs.LG   \n",
-       "1  http://arxiv.org/pdf/2202.00246v1      astro-ph.EP   \n",
-       "2  http://arxiv.org/pdf/2201.13396v1            cs.LG   \n",
-       "3  http://arxiv.org/pdf/2201.09750v1            cs.LG   \n",
-       "4  http://arxiv.org/pdf/2201.03916v1            cs.LG   \n",
-       "5  http://arxiv.org/pdf/2201.03801v1            cs.LG   \n",
-       "6  http://arxiv.org/pdf/2201.02941v1            cs.LG   \n",
-       "7  http://arxiv.org/pdf/2201.01772v1            cs.LG   \n",
-       "8  http://arxiv.org/pdf/2201.00207v1            cs.LG   \n",
-       "9  http://arxiv.org/pdf/2201.00162v1            cs.LG   \n",
+       "                                    url   main_topic  \\\n",
+       "0     http://arxiv.org/pdf/2202.01712v1        cs.LG   \n",
+       "1     http://arxiv.org/pdf/2202.00246v1  astro-ph.EP   \n",
+       "2     http://arxiv.org/pdf/2201.13396v1        cs.LG   \n",
+       "3     http://arxiv.org/pdf/2201.09750v1        cs.LG   \n",
+       "4     http://arxiv.org/pdf/2201.03916v1        cs.LG   \n",
+       "...                                 ...          ...   \n",
+       "5327  http://arxiv.org/pdf/2201.10361v2        cs.NI   \n",
+       "5328  http://arxiv.org/pdf/2201.10360v1      eess.SP   \n",
+       "5329  http://arxiv.org/pdf/2201.10345v1      eess.IV   \n",
+       "5330  http://arxiv.org/pdf/2201.10340v1        cs.IT   \n",
+       "5331  http://arxiv.org/pdf/2201.10328v3        cs.AI   \n",
        "\n",
-       "               all_categories  \n",
-       "0                     [cs.LG]  \n",
-       "1  [astro-ph.EP, astro-ph.IM]  \n",
-       "2     [cs.LG, cs.AI, stat.ML]  \n",
-       "3              [cs.LG, cs.AI]  \n",
-       "4                     [cs.LG]  \n",
-       "5              [cs.LG, cs.AI]  \n",
-       "6       [cs.LG, I.6.7; I.5.1]  \n",
-       "7                     [cs.LG]  \n",
-       "8                     [cs.LG]  \n",
-       "9         [cs.LG, cs.SE, I.2]  "
+       "                      all_topics  \n",
+       "0                        [cs.LG]  \n",
+       "1     [astro-ph.EP, astro-ph.IM]  \n",
+       "2        [cs.LG, cs.AI, stat.ML]  \n",
+       "3                 [cs.LG, cs.AI]  \n",
+       "4                        [cs.LG]  \n",
+       "...                          ...  \n",
+       "5327                     [cs.NI]  \n",
+       "5328            [eess.SP, cs.CV]  \n",
+       "5329            [eess.IV, cs.CV]  \n",
+       "5330     [cs.IT, cs.LG, math.IT]  \n",
+       "5331              [cs.AI, cs.LG]  \n",
+       "\n",
+       "[5332 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(d)"
+    "research_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0f575381-db74-4de9-aac3-846651e67ee0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title:  Review of automated time series forecasting pipelines \n",
-      "Date:  2022-02-03 17:26:27+00:00 \n",
-      "Id:  http://arxiv.org/abs/2202.01712v1 \n",
-      "URL:  http://arxiv.org/pdf/2202.01712v1 \n",
-      "\n",
-      " cs.LG ['cs.LG']\n",
-      "Title:  Hubble Asteroid Hunter: I. Identifying asteroid trails in Hubble Space Telescope images \n",
-      "Date:  2022-02-01 06:56:20+00:00 \n",
-      "Id:  http://arxiv.org/abs/2202.00246v1 \n",
-      "URL:  http://arxiv.org/pdf/2202.00246v1 \n",
-      "\n",
-      " astro-ph.EP ['astro-ph.EP', 'astro-ph.IM']\n",
-      "Title:  NAS-Bench-Suite: NAS Evaluation is (Now) Surprisingly Easy \n",
-      "Date:  2022-01-31 18:02:09+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.13396v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.13396v1 \n",
-      "\n",
-      " cs.LG ['cs.LG', 'cs.AI', 'stat.ML']\n",
-      "Title:  Online AutoML: An adaptive AutoML framework for online learning \n",
-      "Date:  2022-01-24 15:37:20+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.09750v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.09750v1 \n",
-      "\n",
-      " cs.LG ['cs.LG', 'cs.AI']\n",
-      "Title:  Automated Reinforcement Learning (AutoRL): A Survey and Open Problems \n",
-      "Date:  2022-01-11 12:41:43+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.03916v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.03916v1 \n",
-      "\n",
-      " cs.LG ['cs.LG']\n",
-      "Title:  Winning solutions and post-challenge analyses of the ChaLearn AutoDL challenge 2019 \n",
-      "Date:  2022-01-11 06:21:18+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.03801v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.03801v1 \n",
-      "\n",
-      " cs.LG ['cs.LG', 'cs.AI']\n",
-      "Title:  TPAD: Identifying Effective Trajectory Predictions Under the Guidance of Trajectory Anomaly Detection Model \n",
-      "Date:  2022-01-09 06:50:39+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.02941v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.02941v1 \n",
-      "\n",
-      " cs.LG ['cs.LG', 'I.6.7; I.5.1']\n",
-      "Title:  Neural Architecture Search for Inversion \n",
-      "Date:  2022-01-05 17:45:39+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.01772v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.01772v1 \n",
-      "\n",
-      " cs.LG ['cs.LG']\n",
-      "Title:  AutoDES: AutoML Pipeline Generation of Classification with Dynamic Ensemble Strategy Selection \n",
-      "Date:  2022-01-01 15:17:07+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.00207v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.00207v1 \n",
-      "\n",
-      " cs.LG ['cs.LG']\n",
-      "Title:  MLOps -- Definitions, Tools and Challenges \n",
-      "Date:  2022-01-01 10:38:31+00:00 \n",
-      "Id:  http://arxiv.org/abs/2201.00162v1 \n",
-      "URL:  http://arxiv.org/pdf/2201.00162v1 \n",
-      "\n",
-      " cs.LG ['cs.LG', 'cs.SE', 'I.2']\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "for result in search.results():\n",
-    "    print('Title: ', result.title, '\\nDate: ',result.published , '\\nId: ', result.entry_id,'\\nURL: ', result.pdf_url, '\\n\\n', result.primary_category, result.categories)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efa7c054-93f2-4e56-ba4c-661a9bd40db6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f0f204e-2287-4064-aff4-f2fc155f136f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
